API swagger comment (show)
