# config/packages/nelmio_api_doc.yaml
@@ -235,7 +235,7 @@ nelmio_api_doc:
                         - application/json
                     parameters:
                         - name: page
-                          description: Page for list articles
+                          description: Article page
                           in: path
                           required: true
                           type: string
@@ -280,7 +280,7 @@ nelmio_api_doc:
                         - application/json
                     parameters:
                         - name: id
-                          description: Id for show article
+                          description: Article ID
                           in: path
                           required: true
                           type: string
@@ -327,7 +327,7 @@ nelmio_api_doc:
                         - application/json
                     parameters:
                         - name: page
-                          description: Page for list comments
+                          description: Comment Page
                           in: path
                           required: true
                           type: string
@@ -378,3 +378,65 @@ nelmio_api_doc:
                                                  example: true
                         '400':
                             description: Bad request
+            /api/comments/{id}:
+                get:
+                    tags:
+                        - Comments API
+                    description: Comments show
+                    produces:
+                        - application/json
+                    parameters:
+                        - name: id
+                          description: Comment ID
+                          in: path
+                          required: true
+                          type: string
+                    responses:
+                        '200':
+                            description: Comments show successful
+                            schema:
+                                type: object
+                                properties:
+                                    comment:
+                                        type: object
+                                        properties:
+                                            id:
+                                                type: string
+                                                example: 1
+                                            comment:
+                                                type: string
+                                                example: Comment 1 for "Title article 1"
+                                            aricle:
+                                                type: object
+                                                properties:
+                                                    id:
+                                                        type: string
+                                                        example: 1
+                                                    title:
+                                                        type: string
+                                                        example: Title artile 1
+                                                    text:
+                                                        type: string
+                                                        example: Text artile 1
+                                                    imageName:
+                                                        type: string
+                                                        example: article_image.jpg
+                                                    likes:
+                                                        type: string
+                                                        example: 1
+                                                    createdAt:
+                                                        type: string
+                                                        example: "2019-01-24T14:22:51+02:00"
+                                                    approved:
+                                                        type: string
+                                                        example: true
+                                            createdAt:
+                                                 type: string
+                                                 example: "2019-01-24T14:22:51+02:00"
+                                            approved:
+                                                 type: string
+                                                 example: true
+                        '400':
+                            description: Bad request
+                        '404':
+                            description: Comment not found
